# Deterministic-MultiAgent-Research-Platform

./: .env.example  .gitignore  EVALUATION.md  README.md  config.example.yaml  config.yaml  evaluate_system.py  populate_rag.py  pyproject.toml
data/: ai_business_use_cases.json  benchmark_dataset.jsonl
data/chroma_db/: chroma.sqlite3
src/: main.py
src/deterministic_multi_agent_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/engine/: run_flow.py
src/engine/agents/: planner.py  researcher.py  synthesizer.py  verifier.py
src/engine/evaluation/: __init__.py  metrics.py  runner.py
src/engine/events/: emitter.py  models.py  sink.py
src/engine/graph/: flow.py  flow_loop.py  instrumentation.py  loop_controller.py  nodes.py  retry_policy.py  state.py
src/engine/metrics/: llm_usage.py  run_metrics.py
src/engine/reporting/: events.py  run_report.py
src/engine/schemas/: brief.py  evidence.py  planner.py  verify.py
src/engine/tools/: extract.py  populate_rag.py  rag.py  rag_populator.py  web_fetch.py  web_search.py  web_types.py
src/tests/: test_evaluation.py  test_flow.py  test_loop_controller.py  test_metrics.py  test_planner.py  test_rag.py  test_researcher.py  test_scores.py  test_synthesizer.py  test_verifier.py
