[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-multi-agent-engine"
version = "0.1.0"
description = "Cost-aware research + synthesis multi-agent workflow engine"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.2.10",
  "langchain-ollama>=1.0.1",
  "langchain-openai>=1.1.10",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]