[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-multi-agent-engine"
version = "0.1.0"
description = "Cost-aware research + synthesis multi-agent workflow engine"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.2.10",
  "langchain-community>=0.2.0",
  "langchain-ollama>=1.0.1",
  "langchain-openai>=1.1.10",
  "langchain-chroma>=0.1.2",
  "chromadb>=0.4.24",
  "pyyaml>=6.0",
  "sentence-transformers>=2.7.0",
  "streamlit>=1.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]